--- a/client/src/App.css
+++ b/client/src/App.css
@@ -46,3 +46,11 @@ button {
 .split {
   display: flex;
 }
+
+.gutter {
+  background-color: var(--lightGray);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  cursor: col-resize;
+  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==");
+}
