fix: make edits live-time in note and editor title

--- a/client/src/components/Editor/style.css
+++ b/client/src/components/Editor/style.css
@@ -3,6 +3,13 @@
     height: 100vh;
 }
 
+.title-input {
+    all: unset;
+    font-size: 52px;
+    border: none;
+    font-weight: 600;
+}
+
 .react-mde {
     border: none;
     border-radius: 2px;
