--- a/client/src/components/SideBar/Note/style.css
+++ b/client/src/components/SideBar/Note/style.css
@@ -2,6 +2,7 @@
     background-color: var(--lightGray);
     padding: 1em;
     opacity: 0.55;
+    border-radius: 4px;
 }
 
 .note:hover {
@@ -18,46 +19,27 @@
 .note form {
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
     gap: 20px;
-}
-
-.note form input[type="text"]:disabled {
-    flex-grow: 1;
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    border-bottom: 1px solid var(--black);
-    animation-name: none;
 }
 
 .note form input {
     all: unset;
+    cursor: pointer;
+}
+
+.note form input[type="text"]:disabled {
+    animation-name: none;
 }
 
 .note form input[type="text"] {
     all: unset;
     font-weight: 500;
     margin: 10px 0px 0px 0px;
-    padding-bottom: 0.2em;
-
-    border-bottom: 1px solid var(--black);
-
     animation-name: snipper;
     animation-iteration-count: infinite;
     animation-duration: 1.5s;
 }
-
-@keyframes snipper {
-    0% {
-        border-bottom-color: var(--black);
-    }
-    50% {
-        border-bottom-color: var(--white);
-    }
-    100% {
-        border-bottom-color: var(--black);
-    }
-}
-
 .selected-note {
     background-color: var(--black);
     color: var(--white);
@@ -66,4 +48,17 @@
 
 .selected-note small {
     color: var(--white);
+}
+
+/* keyframe editing state */
+@keyframes snipper {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
