--- a/client/src/components/Editor/style.css
+++ b/client/src/components/Editor/style.css
@@ -10,6 +10,13 @@
   font-weight: 600;
 }
 
+.title-input {
+    all: unset;
+    font-size: 52px;
+    border: none;
+    font-weight: 600;
+}
+
 .react-mde {
   border: none;
   border-radius: 2px;
