--- a/client/src/components/SideBar/style.css
+++ b/client/src/components/SideBar/style.css
@@ -53,6 +53,12 @@
     cursor: pointer;
 }
 
+.sidebar ul li .note h3 {
+    font-size: 16px;
+    font-weight: 500;
+    margin: 10px 0px 0px 0px;
+}
+
 .sidebar ul li .note form input[type="text"]:disabled {
     animation-name: none;
 }
