--- a/client/src/components/Editor/style.css
+++ b/client/src/components/Editor/style.css
@@ -35,6 +35,7 @@
 
 .editor input[type="button"] {
     font-size: 16px;
+    ;
 }
 
 .react-mde {
@@ -76,4 +77,20 @@
 
 .heading {
   margin-bottom: 50px;
+}
+
+.heading form button{
+  all: unset;
+  cursor: pointer;
+  color: var(--darkGray);
+  transition: 200ms linear;
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;  
+}
+
+.heading form button:hover{
+  color: var(--black);
+  transition: 200ms linear;
+  
 }
